fix: accessiblity (label, title, contrast)

--- a/css/styles.css
+++ b/css/styles.css
@@ -34,7 +34,7 @@ a.skip:hover {
 		height: auto;
 		overflow: visible;
 }
-}
+
 body,td,th,p{
 	font-family: Arial, Helvetica, sans-serif;
 	font-size: 10pt;
@@ -69,6 +69,7 @@ h1, h2, h3, h4, h5, h6 {
 article, aside, canvas, details, figcaption, figure, footer, header, hgroup, menu, nav, section {
 	display: block;
 }
+
 #maincontent {
   background-color: #f3f3f3;
   min-height: 100%;
@@ -81,8 +82,8 @@ main {
 }
 
 #footer {
-  background-color: #444;
-  color: #aaa;
+  background-color: #1b4a80;
+  color: lightgrey;
   font-size: 8pt;
   letter-spacing: 1px;
   padding: 25px;
@@ -93,7 +94,7 @@ main {
 nav {
   width: 100%;
   height: 80px;
-  background-color: #252831;
+  background-color: #1b4a80;
   text-align:center;
 }
 nav h1 {
@@ -150,7 +151,7 @@ nav h1 a {
 .filter-options {
   width: 100%;
   height: 50px;
-  background-color: #3397DB;
+  background-color: #1b4a80;
   align-items: center;
 }
 .filter-options h2 {
@@ -159,6 +160,7 @@ nav h1 a {
   font-weight: normal;
   line-height: 1;
   margin: 0 20px;
+  padding-top: 1vh;
 }
 .filter-options select {
   background-color: white;
@@ -204,7 +206,7 @@ nav h1 a {
   min-width: 100%;
 }
 #restaurants-list li h1 {
-  color: #f18200;
+  color: #1b4a80;
   font-family: Arial,sans-serif;
   font-size: 14pt;
   font-weight: 200;
@@ -218,7 +220,7 @@ nav h1 a {
   font-size: 11pt;
 }
 #restaurants-list li a {
-  background-color: orange;
+  background-color: #1b4a80;
   border-bottom: 3px solid #eee;
   color: #fff;
   display: inline-block;
